--- a/src/app/post-login/components/financial-data/financial-data.component.html
+++ b/src/app/post-login/components/financial-data/financial-data.component.html
@@ -50,7 +50,7 @@
             [cacheBlockSize]="cacheBlockSize"
             [paginationPageSize]="100"
             [paginateChildRows]="true"
-            [getRowStyle]="getFirstRowStyle"
+            [getRowStyle]="getRowStyle"
             (gridReady)="onGridReady($event)"
             >
         </ag-grid-angular>
