--- a/src/app/post-login/components/financial-data/financial-data.component.scss
+++ b/src/app/post-login/components/financial-data/financial-data.component.scss
@@ -157,7 +157,6 @@ button:focus {
     .ag-cell {
         display: flex;
         align-items: center;
-        color: #2F2F2F;
         font-family:'Proxima Nova';
         font-size: 14px;
         font-weight: 400;
@@ -477,9 +476,12 @@ button:focus {
   //PARENT LINK
   :host ::ng-deep .parent-link{
     text-decoration: none;
-    color: #446a94;
     font-weight: 500;
     cursor: pointer;
+}
+
+:host ::ng-deep .parent-link-color{
+    color: #446a94;
 }
 
 ::ng-deep .hide-header-name .ag-header-cell-comp-wrapper .ag-cell-label-container .ag-header-cell-label .ag-header-cell-text{
