--- a/src/app/post-login/components/financial-data/custom-drop-down-editor/custom-drop-down-editor.component.scss
+++ b/src/app/post-login/components/financial-data/custom-drop-down-editor/custom-drop-down-editor.component.scss
@@ -1,4 +1,8 @@
 :host {
     min-width: 100%;
-  }
-  
+}
+
+:host ::ng-deep .custom-dropdown .k-button-md.k-icon-button .k-button-icon {
+  border-radius: unset !important;
+  border: none !important;
+}
