--- a/src/app/post-login/components/financial-data/custom-drop-down-editor/custom-drop-down-editor.component.html
+++ b/src/app/post-login/components/financial-data/custom-drop-down-editor/custom-drop-down-editor.component.html
@@ -3,6 +3,7 @@
     [data]="franchiseList" 
     (valueChange)="onValueChange($event)"
     [value]="selectedValue"
+    class="custom-dropdown"
 ></kendo-dropdownlist>
 
 <input
