--- a/src/app/post-login/components/financial-data/financial-data.component.html
+++ b/src/app/post-login/components/financial-data/financial-data.component.html
@@ -51,6 +51,7 @@
             [paginationPageSize]="100"
             [paginateChildRows]="true"
             [getRowStyle]="getRowStyle"
+            (paginationChanged)="onPaginationChanged($event)"
             (gridReady)="onGridReady($event)"
             >
         </ag-grid-angular>
