added custom-groups component

--- a/src/app/shared/components/header-two/header-two.component.html
+++ b/src/app/shared/components/header-two/header-two.component.html
@@ -43,6 +43,7 @@
                 *ngIf="showReportsMenu"
               >
                 <span (click)="onClientHealthMetrics($event)">Client Health Metrics (AMV2)</span>
+                <span (click)="onCustomGroups($event)">Custom Groups</span>
                 <span (click)="onSaasRevenue($event)">Saas Revenue</span>
               </div>
         </div>
