Location dropdown changes

--- a/src/app/post-login/components/home/home.component.html
+++ b/src/app/post-login/components/home/home.component.html
@@ -25,7 +25,7 @@
               [itemDisabled]="itemDisabled"
               childrenField="items"
               textField="text"
-              valueField="text"
+              valueField="parentId"
               [filterable]="true"
               class="dropdown locationsDropdwon"
               [ngClass]="valueChangedLocation ? 'location':''"
