Custom group fixes

--- a/src/app/post-login/components/custom-groups/custom-groups.component.html
+++ b/src/app/post-login/components/custom-groups/custom-groups.component.html
@@ -35,6 +35,7 @@
             [pagination]="true"
             [cacheBlockSize]="cacheBlockSize"
             [paginationPageSize]="100"
+            [paginateChildRows]="true"
             (paginationChanged)="onPaginationChanged($event)"
             (gridReady)="onGridReady($event)"
             >
