--- a/src/app/post-login/components/custom-groups/custom-menu-editor/custom-menu-editor.component.html
+++ b/src/app/post-login/components/custom-groups/custom-menu-editor/custom-menu-editor.component.html
@@ -1,12 +1,14 @@
 
 <div class="dropdown-container">
 
-   <kendo-dropdownlist 
+   <kendo-dropdownlist
         [data]="optionList" 
         textField="name"
         valueField="id"
+        [(ngModel)]="selectedOption"
         [valuePrimitive]=true
-        class="custom-dropdown">
+        class="custom-dropdown"
+        (valueChange)="onOptionSelected($event)">
     </kendo-dropdownlist>
 
 </div>
