--- a/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.scss
+++ b/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.scss
@@ -616,3 +616,13 @@ button:focus {
         width: 40px;
     }
 }
+
+::ng-deep .k-dialog-wrapper .k-button-md.k-icon-button .k-button-icon {
+    border: none !important ;
+    width: 35px !important;
+    height: 35px !important;
+}
+
+::ng-deep .k-dialog-wrapper .k-svg-i-x{
+    content:  url('/assets/images/close-icon-black.svg');
+}
