Location dropdown change

--- a/src/app/post-login/components/custom-groups/custom-groups.component.html
+++ b/src/app/post-login/components/custom-groups/custom-groups.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex">
-    <div class="main-container">
+<div class="d-flex gap-4">
+    <div class="main-container" [class.custom-padding-right]="!isGroupEditable">
         <div class="section-header">
             <div class="heading">
                 <img src="assets/images/bar-chart-icon.png" alt="Bar-chart icon">
