--- a/src/app/post-login/components/custom-groups/custom-menu-editor/custom-menu-editor.component.html
+++ b/src/app/post-login/components/custom-groups/custom-menu-editor/custom-menu-editor.component.html
@@ -8,7 +8,8 @@
         [(ngModel)]="selectedOption"
         [valuePrimitive]=true
         class="custom-dropdown"
-        (valueChange)="onOptionSelected($event)">
+        (valueChange)="onOptionSelected($event)"
+        (open)="onMenuDropdownOpen()">
     </kendo-dropdownlist>
 
 </div>
