--- a/src/app/post-login/components/custom-groups/custom-groups.component.html
+++ b/src/app/post-login/components/custom-groups/custom-groups.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex gap-4">
     <div class="main-container" [class.custom-padding-right]="!isGroupEditable">
-        <div class="section-header">
+        <div class="section-header" [class.custom-header]="isGroupEditable && isSmallDesktopScreen">
             <div class="heading">
                 <img src="assets/images/bar-chart-icon.png" alt="Bar-chart icon">
                 <h1>Custom Groups</h1>
