custom group fixes

--- a/src/app/post-login/components/custom-groups/custom-groups.component.html
+++ b/src/app/post-login/components/custom-groups/custom-groups.component.html
@@ -66,7 +66,7 @@
         <form class="k-form k-form-md" [formGroup]="form" (ngSubmit)="onSaveChanges(form)">
             <div class="d-flex flex-column custom-gap-20">   
                 <div class="d-flex flex-column">
-                    <kendo-label class="label-text">Group Name</kendo-label>
+                    <kendo-label class="label-text">Group type</kendo-label>
                     <input
                         formControlName="groupName"
                         kendoTextBox
