create new group functionality added

--- a/src/app/post-login/components/custom-groups/custom-groups.component.html
+++ b/src/app/post-login/components/custom-groups/custom-groups.component.html
@@ -15,7 +15,7 @@
                     >
                     <img src="assets/images/search-icon.png" alt="Search icon">
                 </div>
-                <button class="btn btn-create-new">Create New</button>
+                <button class="btn btn-create-new" (click)="onCreateNewGroup()">Create New</button>
             </div>
         </div>
     
